|                                                                 |
|         - AWStats:                                              |
|               * apache: set statsdir if awstats is enabled      |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-02-26 Benedikt Heintel
	- CONFIGS:
		* fixed bug #96 - added missing spaces on sendmail_path
		* changed session.save_path
	- ENGINE:
		* fixed bug #88 - Backup not working due to an error in MySQL query

2007-02-25 Benedikt Heintel
	- CONFIGS:
		* fixed bug #82 - forgot to upload Makefile
		* fixed bug #89 - typo in Serverports: SMPT => SMTP
	- ENGINE:
		* fixed bug #88 - Backup not working due to an error if user has no MySQL BD
	- LANGUAGES:
		* Russian: added UTF-8 file
		* Turkish: added

2007-02-22 Benedikt Heintel
	- CONFIGS:
		* added missing </IfModule>
	- GUI:
		* fixed warnings

2007-02-21 Benedikt Heintel
	- LANGUAGES:
		* Italian: added missing strings
		* Polish: added
		* Czech: added missing strings

2007-02-15 Benedikt Heintel
	- GUI:
		* renamed domain.gif to domains.gif (spelling-mistake)
		* fixed language upload
		* fixed bug #75: Error occured when upload a new custom logo
	- LANGUAGE:
		* Czech: updated missing strings
	- SETUP:
		* added Makefile for AWStats (fixed bug #82)
		* changed Makefile: added AWStats install, fixed uninstall errors, added gentoo

2007-02-14 Benedikt Heintel
	- GUI:
		* modified multilanguage upload
		* modified tab index on login
	- LANGUAGES:
		* added Czech
		* added missing strings Portugues - Brazil
	- SETUP:
		* fixed bug #79
		* added reset-setup into setup dir

2007-02-13 Benedikt Heintel
	- GUI:
		* changed design issues
		* fixed not translated message
	- LANGUAGES:
		* Ukrainian: added missing strings (complete)
	- SETUP:
		* pma user is added in config.inc.php file

2007-02-13 Laurent DECLERCQ
	- SETUP: