@@ -1,6 +1,8 @@
 
 ROOT_APACHE_CONF=$(ROOT_CONF)/apache2
 
+RELEASE=`cat /etc/issue.net|awk '{print $3}'`
+
 export
 
 install:
@@ -11,7 +13,12 @@ install:
 	$(SYSTEM_MAKE_DIRS) $(ROOT_APACHE_CONF)/mods-available
 
 	cp ./httpd.conf ./working/vhcs2.conf
-	cp ./fastcgi.conf ./working/fastcgi.conf
+	# Debian 4.0 "Etch"?
+	if [[ $(RELEASE) == 4.0 ]]; then
+		cp ./fastcgi2.conf ./working/fastcgi.conf
+	else
+		cp ./fastcgi.conf ./working/fastcgi.conf
+	fi
 	cp ./httpd.conf $(SYSTEM_CONF)/apache
 	cp -R ./backup $(SYSTEM_CONF)/apache
 	cp -R ./parts $(SYSTEM_CONF)/apache
