@@ -1,0 +1,65 @@
+# VHCS ω (OMEGA) - Virtual Hosting Control System | Omega Version
+# Copyright (c) 2006-2007 by ispCP | http://isp-control.net
+#
+#
+# License:
+#    This program is free software; you can redistribute it and/or
+#    modify it under the terms of the GPL General Public License
+#    as published by the Free Software Foundation; either version 2.0
+#    of the License, or (at your option) any later version.
+#
+#    This program is distributed in the hope that it will be useful,
+#    but WITHOUT ANY WARRANTY; without even the implied warranty of
+#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#    GPL General Public License for more details.
+#
+#    You may have received a copy of the GPL General Public License
+#    along with this program.
+#
+#    An on-line copy of the GPL General Public License can be found
+#    http://www.fsf.org/licensing/licenses/gpl.txt
+#
+########################################################################
+#
+# @TODO :
+# - Finish PHP5 Support
+# - Finish config Fastcgi
+
+<IfModule mod_fastcgi.c>
+FastCgiWrapper On
+FastCgiIpcDir /var/lib/apache2/fastcgi2
+FastCgiConfig -minProcesses 1 -maxProcesses 10 -singleThreshold 100
+              #-killInterval 300 \
+              #-autoUpdate \
+              #-idle-timeout 240 \
+              #-pass-header HTTP_AUTHORIZATION
+
+FastCgiServer {PHP_STARTER_DIR}/master/php4-fcgi-starter -user {APACHE_SUEXEC_USER_PREF}{APACHE_SUEXEC_MIN_UID} -group {APACHE_SUEXEC_USER_PREF}{APACHE_SUEXEC_MIN_GID}
+
+#
+# PHP4 SUPPORT
+#
+
+AddHandler php-fastcgi .php
+
+<Location /php4/php4-fcgi-starter>
+    SetHandler fastcgi-script
+    Options +ExecCGI
+</Location>
+
+Action php-fastcgi /php4/php4-fcgi-starter
+AddType application/x-httpd-php .php
+
+#
+# PHP5 SUPPORT
+#
+
+#AddHandler php5-fastcgi .php5
+
+#<Location /php5/php5-fcgi-starter>
+#    SetHandler fastcgi-script
+#    Options +ExecCGI
+#</Location>
+
+#Action php5-fastcgi /php5/php5-fcgi-starter
+</IfModule>
